# revs3

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  docker-push.yml
src/: app_config.rs  lib.rs  logger.rs  main.rs  s3_handler.rs
test_data/: hello.js  index.css  index.html
