[package]
name = "revs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
aws-sdk-s3 = "1.8.0"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
futures-core = "0.3.29"
futures = "0.3.29"
log = "0.4.20"
env_logger = "0.10.1"

[dev-dependencies]
actix-rt = "2.9.0"
async-once-cell = "0.5.3"
